--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,9 @@ server.tomcat.max-http-form-post-size=10MB
 # ========================================================
 # DATABASE
 # ========================================================
-spring.datasource.url=jdbc:sqlserver://dev.sevensoft.com.br:1433;databaseName=utils;integratedSecurity=false;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=HPL200hx
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=utils;integratedSecurity=false;trustServerCertificate=true
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-query=SELECT 1
